src/objects/CourseStatus__c.object
<CustomObject>
    <fields>
        <fullName>ApprovedModules__c</fullName>
        <label>Approved Modules</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course</label>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Courses Status</relationshipLabel>
        <relationshipName>CoursesStatus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <formula>LEFT(Course__c, 15) + LEFT(Member__c, 15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>FieloPLT__Member__c</referenceTo>
        <relationshipLabel>Courses Status</relationshipLabel>
        <relationshipName>CoursesStatus</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <formula>ApprovedModules__c / Course__r.ActiveModules__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Course Status</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Course Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courses Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ApprovedModulesCanNotBeNull</fullName>
        <active>true</active>
        <description>The Approved Modules field cannot be null.</description>
        <errorConditionFormula>ISBLANK(ApprovedModules__c)</errorConditionFormula>
        <errorMessage>The Approved Modules cannot be null.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CourseStatusMustBeActive</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISPICKVAL(Course__r.Status__c,&quot;Active&quot;))</errorConditionFormula>
        <errorDisplayField>Course__c</errorDisplayField>
        <errorMessage>Course Status must be related to a Course with the Status Active</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MemberRequired</fullName>
        <active>true</active>
        <description>The Member is required.</description>
        <errorConditionFormula>ISNULL(Member__c ) || ISBLANK(Member__c )</errorConditionFormula>
        <errorDisplayField>Member__c</errorDisplayField>
        <errorMessage>Member is required.</errorMessage>
    </validationRules>
</CustomObject>